--- a/templates/index.html
+++ b/templates/index.html
@@ -53,208 +53,7 @@
                 <label for="syntax-choice"><input list="languages" id="syntax-choice" name="syntax-choice"
                                                   placeholder="None"/>
                     <datalist id="languages">
-                        <option value="Plain text">
-                        <option value="Java">
-                        <option value="HTML">
-                        <option value="XML">
-                        <option value="SVG">
-                        <option value="MathML">
-                        <option value="SSML">
-                        <option value="RSS">
-                        <option value="CSS">
-                        <option value="C-like">
-                        <option value="JavaScript">
-                        <option value="ABAP">
-                        <option value="ABNF">
-                        <option value="AL">
-                        <option value="ANTLR4">
-                        <option value="Apache Configuration">
-                        <option value="APL">
-                        <option value="AQL">
-                        <option value="Arduino">
-                        <option value="ARFF">
-                        <option value="AsciiDoc">
-                        <option value="ASP.NET (C#)">
-                        <option value="6502 Assembly">
-                        <option value="Atmel AVR Assembly">
-                        <option value="AutoHotkey">
-                        <option value="AutoIt">
-                        <option value="AviSynth">
-                        <option value="Avro IDL">
-                        <option value="BASIC">
-                        <option value="BBcode">
-                        <option value="BNF">
-                        <option value="RBNF">
-                        <option value="BSL (1C">
-                        <option value="OneScript">
-                        <option value="C#">
-                        <option value="C++">
-                        <option value="CFScript">
-                        <option value="CIL">
-                        <option value="CMake">
-                        <option value="COBOL">
-                        <option value="CoffeeScript">
-                        <option value="Concurnas">
-                        <option value="Content-Security-Policy">
-                        <option value="CSS Extras">
-                        <option value="CSV">
-                        <option value="DataWeave">
-                        <option value="DAX">
-                        <option value="Django/Jinja2">
-                        <option value="DNS zone file">
-                        <option value="Docker">
-                        <option value="DOT (Graphviz)">
-                        <option value="EBNF">
-                        <option value="EditorConfig">
-                        <option value="EJS">
-                        <option value="Embedded Lua templating">
-                        <option value="ERB">
-                        <option value="Excel Formula">
-                        <option value="F#">
-                        <option value="Firestore security rules">
-                        <option value="FreeMarker Template Language">
-                        <option value="GameMaker Language">
-                        <option value="GAP (CAS)">
-                        <option value="G-code">
-                        <option value="GDScript">
-                        <option value="GEDCOM">
-                        <option value="GLSL">
-                        <option value="GN">
-                        <option value="Go module">
-                        <option value="GraphQL">
-                        <option value="Handlebars">
-                        <option value="Haskell">
-                        <option value="HCL">
-                        <option value="HLSL">
-                        <option value="HTTP">
-                        <option value="HTTP Public-Key-Pins">
-                        <option value="HTTP Strict-Transport-Security">
-                        <option value="IchigoJam">
-                        <option value="ICU Message Format">
-                        <option value="Idris">
-                        <option value=".ignore">
-                        <option value=".gitignore">
-                        <option value=".hgignore">
-                        <option value=".npmignore">
-                        <option value="Inform 7">
-                        <option value="JavaDoc">
-                        <option value="JavaDoc-like">
-                        <option value="Java stack trace">
-                        <option value="JQ">
-                        <option value="JSDoc">
-                        <option value="JS Extras">
-                        <option value="JSON">
-                        <option value="Web App Manifest">
-                        <option value="JSON5">
-                        <option value="JSONP">
-                        <option value="JS stack trace">
-                        <option value="JS Templates">
-                        <option value="Keepalived Configure">
-                        <option value="Kotlin Script">
-                        <option value="Kotlin">
-                        <option value="KuMir (КуМир)">
-                        <option value="LaTeX">
-                        <option value="TeX">
-                        <option value="ConTeXt">
-                        <option value="LilyPond">
-                        <option value="Lisp">
-                        <option value="LLVM IR">
-                        <option value="Log file">
-                        <option value="LOLCODE">
-                        <option value="Magma (CAS)">
-                        <option value="Markdown">
-                        <option value="Markup templating">
-                        <option value="MATLAB">
-                        <option value="MAXScript">
-                        <option value="MEL">
-                        <option value="MongoDB">
-                        <option value="MoonScript">
-                        <option value="N1QL">
-                        <option value="N4JS">
-                        <option value="Nand To Tetris HDL">
-                        <option value="Naninovel Script">
-                        <option value="NASM">
-                        <option value="NEON">
-                        <option value="nginx">
-                        <option value="NSIS">
-                        <option value="Objective-C">
-                        <option value="OCaml">
-                        <option value="OpenCL">
-                        <option value="OpenQasm">
-                        <option value="PARI/GP">
-                        <option value="Object Pascal">
-                        <option value="PATROL Scripting Language">
-                        <option value="PC-Axis">
-                        <option value="PeopleCode">
-                        <option value="PHP">
-                        <option value="PHPDoc">
-                        <option value="PHP Extras">
-                        <option value="PL/SQL">
-                        <option value="PowerQuery">
-                        <option value="PowerShell">
-                        <option value="PromQL">
-                        <option value=".properties">
-                        <option value="Protocol Buffers">
-                        <option value="PureBasic">
-                        <option value="PureScript">
-                        <option value="Python">
-                        <option value="Q#">
-                        <option value="Q (kdb+ database)">
-                        <option value="QML">
-                        <option value="Racket">
-                        <option value="Razor C#">
-                        <option value="React JSX">
-                        <option value="React TSX">
-                        <option value="Ren'py">
-                        <option value="reST (reStructuredText)">
-                        <option value="Robot Framework">
-                        <option value="Ruby">
-                        <option value="SAS">
-                        <option value="Sass (Sass)">
-                        <option value="Sass (Scss)">
-                        <option value="Shell session">
-                        <option value="SML">
-                        <option value="SML/NJ">
-                        <option value="Solidity (Ethereum)">
-                        <option value="Solution file">
-                        <option value="Soy (Closure Template)">
-                        <option value="SPARQL">
-                        <option value="Splunk SPL">
-                        <option value="SQF">
-                        <option value="SQL">
-                        <option value="Structured Text (IEC 61131-3)">
-                        <option value="Systemd configuration file">
-                        <option value="T4 templating">
-                        <option value="T4 Text Templates (C#)">
-                        <option value="T4 Text Templates (VB)">
-                        <option value="TAP">
-                        <option value="Template Toolkit 2">
-                        <option value="TOML">
-                        <option value="trickle">
-                        <option value="troy">
-                        <option value="TriG">
-                        <option value="TypeScript">
-                        <option value="TSConfig">
-                        <option value="UnrealScript">
-                        <option value="UO Razor Script">
-                        <option value="URI">
-                        <option value="URL">
-                        <option value="VB.Net">
-                        <option value="VHDL">
-                        <option value="vim">
-                        <option value="Visual Basic">
-                        <option value="VBA">
-                        <option value="WebAssembly">
-                        <option value="Web IDL">
-                        <option value="Wiki markup">
-                        <option value="Wolfram language">
-                        <option value="Mathematica Notebook">
-                        <option value="XeoraCube">
-                        <option value="XML doc (.net)">
-                        <option value="Xojo (REALbasic)">
-                        <option value="XQuery">
-                        <option value="YAML">
-                        <option value="YANG">
+                        <option value="Plain text"> <option value="Java"> <option value="HTML"> <option value="XML"> <option value="SVG"> <option value="MathML"> <option value="SSML"> <option value="RSS"> <option value="CSS"> <option value="C-like"> <option value="JavaScript"> <option value="ABAP"> <option value="ABNF"> <option value="AL"> <option value="ANTLR4"> <option value="Apache Configuration"> <option value="APL"> <option value="AQL"> <option value="Arduino"> <option value="ARFF"> <option value="AsciiDoc"> <option value="ASP.NET (C#)"> <option value="6502 Assembly"> <option value="Atmel AVR Assembly"> <option value="AutoHotkey"> <option value="AutoIt"> <option value="AviSynth"> <option value="Avro IDL"> <option value="BASIC"> <option value="BBcode"> <option value="BNF"> <option value="RBNF"> <option value="BSL (1C"> <option value="OneScript"> <option value="C#"> <option value="C++"> <option value="CFScript"> <option value="CIL"> <option value="CMake"> <option value="COBOL"> <option value="CoffeeScript"> <option value="Concurnas"> <option value="Content-Security-Policy"> <option value="CSS Extras"> <option value="CSV"> <option value="DataWeave"> <option value="DAX"> <option value="Django/Jinja2"> <option value="DNS zone file"> <option value="Docker"> <option value="DOT (Graphviz)"> <option value="EBNF"> <option value="EditorConfig"> <option value="EJS"> <option value="Embedded Lua templating"> <option value="ERB"> <option value="Excel Formula"> <option value="F#"> <option value="Firestore security rules"> <option value="FreeMarker Template Language"> <option value="GameMaker Language"> <option value="GAP (CAS)"> <option value="G-code"> <option value="GDScript"> <option value="GEDCOM"> <option value="GLSL"> <option value="GN"> <option value="Go module"> <option value="GraphQL"> <option value="Handlebars"> <option value="Haskell"> <option value="HCL"> <option value="HLSL"> <option value="HTTP"> <option value="HTTP Public-Key-Pins"> <option value="HTTP Strict-Transport-Security"> <option value="IchigoJam"> <option value="ICU Message Format"> <option value="Idris"> <option value=".ignore"> <option value=".gitignore"> <option value=".hgignore"> <option value=".npmignore"> <option value="Inform 7"> <option value="JavaDoc"> <option value="JavaDoc-like"> <option value="Java stack trace"> <option value="JQ"> <option value="JSDoc"> <option value="JS Extras"> <option value="JSON"> <option value="Web App Manifest"> <option value="JSON5"> <option value="JSONP"> <option value="JS stack trace"> <option value="JS Templates"> <option value="Keepalived Configure"> <option value="Kotlin Script"> <option value="Kotlin"> <option value="KuMir (КуМир)"> <option value="LaTeX"> <option value="TeX"> <option value="ConTeXt"> <option value="LilyPond"> <option value="Lisp"> <option value="LLVM IR"> <option value="Log file"> <option value="LOLCODE"> <option value="Magma (CAS)"> <option value="Markdown"> <option value="Markup templating"> <option value="MATLAB"> <option value="MAXScript"> <option value="MEL"> <option value="MongoDB"> <option value="MoonScript"> <option value="N1QL"> <option value="N4JS"> <option value="Nand To Tetris HDL"> <option value="Naninovel Script"> <option value="NASM"> <option value="NEON"> <option value="nginx"> <option value="NSIS"> <option value="Objective-C"> <option value="OCaml"> <option value="OpenCL"> <option value="OpenQasm"> <option value="PARI/GP"> <option value="Object Pascal"> <option value="PATROL Scripting Language"> <option value="PC-Axis"> <option value="PeopleCode"> <option value="PHP"> <option value="PHPDoc"> <option value="PHP Extras"> <option value="PL/SQL"> <option value="PowerQuery"> <option value="PowerShell"> <option value="PromQL"> <option value=".properties"> <option value="Protocol Buffers"> <option value="PureBasic"> <option value="PureScript"> <option value="Python"> <option value="Q#"> <option value="Q (kdb+ database)"> <option value="QML"> <option value="Racket"> <option value="Razor C#"> <option value="React JSX"> <option value="React TSX"> <option value="Ren'py"> <option value="reST (reStructuredText)"> <option value="Robot Framework"> <option value="Ruby"> <option value="SAS"> <option value="Sass (Sass)"> <option value="Sass (Scss)"> <option value="Shell session"> <option value="SML"> <option value="SML/NJ"> <option value="Solidity (Ethereum)"> <option value="Solution file"> <option value="Soy (Closure Template)"> <option value="SPARQL"> <option value="Splunk SPL"> <option value="SQF"> <option value="SQL"> <option value="Structured Text (IEC 61131-3)"> <option value="Systemd configuration file"> <option value="T4 templating"> <option value="T4 Text Templates (C#)"> <option value="T4 Text Templates (VB)"> <option value="TAP"> <option value="Template Toolkit 2"> <option value="TOML"> <option value="trickle"> <option value="troy"> <option value="TriG"> <option value="TypeScript"> <option value="TSConfig"> <option value="UnrealScript"> <option value="UO Razor Script"> <option value="URI"> <option value="URL"> <option value="VB.Net"> <option value="VHDL"> <option value="vim"> <option value="Visual Basic"> <option value="VBA"> <option value="WebAssembly"> <option value="Web IDL"> <option value="Wiki markup"> <option value="Wolfram language"> <option value="Mathematica Notebook"> <option value="XeoraCube"> <option value="XML doc (.net)"> <option value="Xojo (REALbasic)"> <option value="XQuery"> <option value="YAML"> <option value="YANG">
                     </datalist>
                 </label>
             </div>
@@ -263,15 +62,12 @@
             <input type="submit" value="Create"></div>
     </form>
 </div>
-
-
-<br><br><br><br>
-Most viewed pastes:<br>
+<div class="container">Most viewed pastes:<br>
 {% for paste in pastes %}
     Views: {{ paste.views }}
     <a href="/{{ paste.paste_id }}">{{ paste.title }}</a>
     <br>
-{% endfor %}
+{% endfor %}</div>
 <script type="text/javascript" src="/static/tab.js"></script>
 </body>
 </html>
