--- a/static/pastes.css
+++ b/static/pastes.css
@@ -72,7 +72,7 @@ tbody tr:nth-child(even) {
     color: LIME;
 }
 
-input[type=text], select, textarea {
+input[type=text], select, textarea, input[type=password] {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
@@ -139,6 +139,10 @@ input[type='radio']:checked:after {
     padding: 5%;
 }
 
+.accounts {
+    padding: 1% 30% 1%;
+}
+
 .col-25 {
     float: left;
     width: 25%;
@@ -170,4 +174,11 @@ input[type=checkbox] {
 
 input[type=checkbox]:checked {
     filter: invert(100%) hue-rotate(71deg) brightness(1.7);
+}
+
+img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
 }
