--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login to PasteBag</title>
     <script type="text/javascript" src="/static/check.js"></script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
 {% include "navigation.html" %}
