--- a/templates/picture.html
+++ b/templates/picture.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit profile</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 </head>
 <body>
 {% include "navigation.html" %}
