--- a/templates/login.html
+++ b/templates/login.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 {% include "navigation.html" %}
-<div class="accounts"><h1>No account? Register
-    <a href="/register">here</a></h1>
+<div class="accounts"><h1>Login</h1><h3>No account? Register
+    <a href="/register">here</a></h3>
     <br>
     {% if error %}
         {{ error }}<br>
