--- a/templates/register.html
+++ b/templates/register.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 {% include "navigation.html" %}
-<div class="accounts"><h1>Got account? Login
-    <a href="/login">here</a></h1>
+<div class="accounts"><h1>Register</h1><h3>Got account? Login
+    <a href="/login">here</a></h3>
     <br>
     {% if error %}
         {{ error }}<br>
     {% endif %}
-    <form action="/login" method="POST" onsubmit="return check(this)">
+    <form action="/register" method="POST" onsubmit="return check(this)">
         <p>Username:<br>
             <label>
                 <input type="text" name="username">
@@ -23,7 +23,7 @@
             <label>
                 <input type="password" name="password">
             </label></p>
-        <input type="submit" value="Log in">
+        <input type="submit" value="Register">
     </form>
 </div>
 </body>
