--- a/static/pastes.css
+++ b/static/pastes.css
@@ -135,7 +135,7 @@ input[type='radio']:checked:after {
 }
 
 .container {
-    padding: 5%;
+    padding: 5% 20% 0;
 }
 
 .accounts {
@@ -175,6 +175,13 @@ input[type='radio']:checked:after {
         -moz-columns: 1;
     }
 }
+
+@media screen and (min-width: 1200px) {
+    .container {
+        padding: 5% 15% 0;
+    }
+}
+
 
 input[type=checkbox] {
     transform: scale(1.5);
